--- a/chat.html
+++ b/chat.html
@@ -3,191 +3,304 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>ARKON • Chat (Netlify Functions)</title>
+<title>ARKON • Chat</title>
+<meta name="description" content="Prosty, stabilny chat dla Netlify Functions.">
 <style>
-  :root{--bg:#0b1020;--p1:#101736;--p2:#0f1a44;--ink:#e8edff;--muted:#aeb8da;--line:#253166}
-  *{box-sizing:border-box} html,body{height:100%} body{margin:0;background:linear-gradient(180deg,#0a0f1e,#0c1230);color:var(--ink);font:15px/1.5 system-ui,Segoe UI,Roboto,Arial}
-  header{padding:12px 16px;border-bottom:1px solid var(--line);background:#11183a}
-  h1{margin:0;font-size:20px}
-  .wrap{max-width:980px;margin:12px auto;padding:12px}
+  :root{
+    --bg:#0b1020; --p1:#101736; --p2:#0f1a44; --ink:#e8edff; --muted:#aeb8da; --line:#253166; --accent:#4cc9f0;
+  }
+  *{box-sizing:border-box}
+  body{margin:0;background:linear-gradient(180deg,#0a0f1e,#0c1230 55%,#0a0f1e);color:var(--ink);
+       font:15px/1.5 system-ui,Segoe UI,Roboto,Arial;min-height:100vh;display:flex;flex-direction:column}
+  header{padding:12px 16px;border-bottom:1px solid var(--line);background:#11183a;display:flex;gap:12px;flex-wrap:wrap;align-items:center}
+  header h1{margin:0;font-size:18px}
   .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
-  .pill{display:inline-block;background:#0d1530;border:1px dashed #2b3a77;border-radius:999px;padding:6px 10px;color:#aeb8da;font-size:12px}
-  button{background:#233261;border:1px solid #3a4ca3;color:#fff;border-radius:10px;padding:9px 12px;cursor:pointer}
-  button.ghost{background:transparent;border:1px dashed #3a4ca3}
-  textarea,input{width:100%;background:#0d1530;border:1px solid #28356c;border-radius:10px;padding:9px;color:var(--ink)}
-  .panel{background:linear-gradient(180deg,var(--p1),var(--p2));border:1px solid var(--line);border-radius:14px;padding:12px}
-  #msgs{height:52vh;overflow:auto;display:flex;flex-direction:column;gap:10px;padding:10px;background:#0e1536;border:1px solid #26306a;border-radius:12px}
+  input,select,textarea,button{font:inherit;color:var(--ink)}
+  input,select,textarea{background:#0d1530;border:1px solid #28356c;border-radius:10px;padding:8px}
+  button{background:#233261;border:1px solid #3a4ca3;color:#fff;border-radius:10px;padding:8px 12px;cursor:pointer}
+  button.ghost{background:transparent;border-style:dashed}
+  main{max-width:1100px;margin:12px auto;padding:0 12px;flex:1;width:100%}
+  .panel{background:linear-gradient(180deg,var(--p1),var(--p2));border:1px solid var(--line);border-radius:14px;overflow:hidden;display:flex;flex-direction:column;min-height:70vh}
+  .topbar{display:flex;justify-content:space-between;align-items:center;padding:10px 12px;border-bottom:1px solid var(--line)}
+  .msgs{flex:1;overflow:auto;padding:12px;display:flex;flex-direction:column;gap:10px}
   .msg{display:grid;grid-template-columns:auto 1fr;gap:8px;align-items:flex-start}
-  .bub{background:#111b3f;border:1px solid #2a3a75;border-radius:12px;padding:8px 10px}
-  .msg.me .bub{background:#16204d;border-color:#3d58c1}
-  .meta{font-size:11px;color:#aeb8da}
-  .file{display:inline-flex;gap:6px;align-items:center;padding:3px 6px;border:1px dashed #3a4ca3;border-radius:8px}
-  img.preview{max-width:300px;border:1px solid #2a3a75;border-radius:8px;margin-top:6px}
+  .bubble{background:linear-gradient(180deg,#111a3c,#0f1a44);border:1px solid #2a3a75;border-radius:12px;padding:8px 10px;max-width:920px;word-break:break-word}
+  .me .bubble{background:#16204d;border-color:#3d58c1}
+  .meta{font-size:11px;color:var(--muted)}
+  .composer{border-top:1px solid var(--line);padding:10px;display:grid;grid-template-columns:1fr auto;gap:8px}
+  .error{background:#3a1f2a;border:1px solid #7b3341;color:#ffd7d7;padding:8px 10px;border-radius:8px;margin:8px 12px;display:none}
+  .chip{display:inline-block;padding:2px 8px;border:1px dashed #3a4ca3;border-radius:999px;font-size:12px;background:#0d1530}
+  .day{display:flex;align-items:center;gap:10px;margin:4px 0}
+  .day::before,.day::after{content:"";height:1px;background:#223160;flex:1}
+  a{color:#cfe1ff}
 </style>
 </head>
 <body>
-<header>
-  <h1>ARKON • Chat</h1>
-</header>
-
-<div class="wrap">
-  <div class="panel">
-    <div class="row" style="margin-bottom:8px">
-      <span class="pill">Pokój: <b id="roomLbl">global</b></span>
-      <span class="pill">Ja: <b id="meLbl">Pracownik</b></span>
-      <button id="btnReload" class="ghost" type="button">⟳ Odśwież</button>
-      <label class="pill" style="cursor:pointer">Załaduj plik… <input id="file" type="file" hidden></label>
+  <header>
+    <h1>ARKON • Chat</h1>
+    <div class="row">
+      <label>Pokój:
+        <select id="room">
+          <option value="global">global</option>
+          <option value="krolowa">krolowa</option>
+          <option value="adrian">adrian</option>
+          <option value="emil">emil</option>
+        </select>
+      </label>
+      <label>Ja:
+        <input id="nick" placeholder="Twój podpis" style="width:160px">
+      </label>
+      <button id="btnSave" class="ghost">Zapisz ustawienia</button>
+      <span id="conn" class="chip">status: —</span>
     </div>
+  </header>
 
-    <div id="msgs" aria-live="polite"></div>
+  <main>
+    <div id="err" class="error"></div>
+    <section class="panel">
+      <div class="topbar">
+        <div class="row">
+          <strong id="title">Pokój: global</strong>
+        </div>
+        <div class="row">
+          <input id="file" type="file" hidden>
+          <button id="btnFile" class="ghost" title="Załącz plik">📎 Załącz</button>
+          <button id="btnReload" class="ghost" title="Odśwież">⟳</button>
+        </div>
+      </div>
 
-    <div class="row" style="margin-top:10px">
-      <textarea id="txt" placeholder="Napisz wiadomość… (Ctrl+Enter wysyła)" rows="2"></textarea>
-      <button id="btnSend" type="button">Wyślij ▶</button>
-    </div>
-  </div>
-</div>
+      <div id="list" class="msgs" aria-live="polite"></div>
+
+      <div class="composer">
+        <textarea id="text" rows="2" placeholder="Napisz wiadomość… (Ctrl+Enter wysyła)"></textarea>
+        <div class="row">
+          <button id="btnSend">Wyślij ▶</button>
+        </div>
+      </div>
+    </section>
+  </main>
 
 <script>
-(() => {
+(function(){
   "use strict";
 
-  // ===== USTAWIENIA UŻYTKOWNIKA =====
-  const ROOM = localStorage.getItem('chat_room') || 'global';
-  const ME   = localStorage.getItem('chat_me')   || 'Pracownik';
+  // ==== KONFIG API (zmień tylko jeśli Twoje funkcje są pod inną bazową ścieżką) ====
+  const API_BASE = "/api"; // np. "" (gdy proxy), "/.netlify/functions" (gdy chcesz bez redirectów)
 
-  // ===== DOM =====
-  const $ = s => document.querySelector(s);
-  const msgsBox   = $('#msgs');
-  const txt       = $('#txt');
-  const fileInput = $('#file');
-  $('#roomLbl').textContent = ROOM;
-  $('#meLbl').textContent   = ME;
+  // ==== STAN ====
+  const $ = sel => document.querySelector(sel);
+  const state = {
+    room: localStorage.getItem("room") || "global",
+    me:   localStorage.getItem("nick") || "Pracownik",
+    items: [],
+    poll: null,
+    lastRenderedDay: ""
+  };
+  const INT = new Intl.DateTimeFormat('pl-PL', {dateStyle:'short', timeStyle:'short'});
 
-  // ===== HELPERS =====
-  const INT = new Intl.DateTimeFormat('pl-PL', { dateStyle:'short', timeStyle:'short' });
-  const esc = s => (s==null?'':String(s)).replace(/[&<>"]/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;'}[c]));
-  const linkify = t => String(t||'').replace(/(https?:\/\/\S+)/g, '<a href="$1" target="_blank" rel="noopener">$1</a>');
+  // ==== UI INIT ====
+  $("#room").value = state.room;
+  $("#nick").value = state.me;
+  $("#title").textContent = "Pokój: " + state.room;
 
-  function fileChip(url) {
-    const name = (url||'').split('/').pop();
-    const isImg = /^data:image\//.test(url) || /\.(png|jpe?g|gif|webp|bmp|svg)$/i.test(name);
-    return (
-      '<a class="file" href="'+esc(url)+'" target="_blank" rel="noopener">📎 '+esc(name||'plik')+'</a>' +
-      (isImg ? '<div><img class="preview" src="'+esc(url)+'" alt=""></div>' : '')
-    );
+  // ==== NARZĘDZIA ====
+  function showErr(msg){
+    const box = $("#err");
+    box.textContent = msg || "";
+    box.style.display = msg ? "block" : "none";
+  }
+  function setConn(txt){ $("#conn").textContent = "status: " + txt; }
+
+  function esc(s){
+    return String(s||"").replace(/[&<>"]/g, c => (
+      c==="&" ? "&amp;" : c==="<" ? "&lt;" : c===">" ? "&gt;" : c
+    ));
+  }
+  function linkify(s){
+    const t = String(s||"");
+    return t.replace(/(https?:\/\/[^\s)]+)/g, '<a href="$1" target="_blank" rel="noopener">$1</a>');
   }
 
-  function render(messages) {
-    const out = [];
-    let lastDay = '';
-    (messages || []).forEach(m => {
-      const day = (m.created_at||'').slice(0,10);
-      if (day && day !== lastDay) {
-        out.push('<div class="meta" style="text-align:center;margin:6px 0">'+
-          esc(INT.format(new Date(m.created_at)).split(',')[0])+'</div>');
-        lastDay = day;
+  function dividerIfNewDay(ts){
+    const d = (ts||"").slice(0,10);
+    if(!d) return "";
+    if (d !== state.lastRenderedDay){
+      state.lastRenderedDay = d;
+      const dateStr = INT.format(new Date(ts)).split(",")[0];
+      return '<div class="day"><span>'+esc(dateStr)+'</span></div>';
+    }
+    return "";
+  }
+
+  function render(){
+    const box = $("#list");
+    state.lastRenderedDay = "";
+    let html = "";
+    const items = state.items.slice().sort((a,b)=> new Date(a.time||a.created_at||0) - new Date(b.time||b.created_at||0));
+    for(const m of items){
+      const me = (m.author || m.nick) === state.me;
+      const ts = m.time || m.created_at || new Date().toISOString();
+      html += dividerIfNewDay(ts);
+      const who = me ? "Ja" : esc(m.author || m.nick || "—");
+      let body = esc(m.text || m.body || "");
+      body = linkify(body);
+      let filePart = "";
+      if (m.file || m.file_url || m.url){
+        const url = m.file || m.file_url || m.url;
+        const name = url.split("/").pop();
+        filePart = ' <div><a class="chip" href="'+esc(url)+'" target="_blank" rel="noopener">📎 '+esc(name)+'</a></div>';
       }
-      const me = m.author === ME;
-      out.push(
-        '<div class="msg '+(me ? 'me' : '')+'">'+
-          '<div class="meta" style="min-width:90px">'+(me ? 'Ja' : esc(m.author||'—'))+'</div>'+
-          '<div class="bub">'+
-            (m.deleted_at ? '<i class="meta">[usunięto]</i>' : linkify(esc(m.body||'')))+
-            (m.file_url ? fileChip(m.file_url) : '')+
-            '<div class="meta" style="margin-top:4px">'+INT.format(new Date(m.created_at))+(m.edited_at ? ' • ed.' : '')+'</div>'+
-          '</div>'+
-        '</div>'
-      );
+      html += ''
+        + '<div class="msg '+(me?'me':'')+'">'
+        +   '<div class="meta">'+ who +'</div>'
+        +   '<div class="bubble">'
+        +     (body ? body : '<i class="meta">[bez treści]</i>')
+        +     filePart
+        +     '<div class="meta" style="margin-top:4px">'+ esc(INT.format(new Date(ts))) + (me?' • ✓✓':'') +'</div>'
+        +   '</div>'
+        + '</div>';
+    }
+    box.innerHTML = html || '<div class="meta">Brak wiadomości…</div>';
+    box.scrollTop = box.scrollHeight;
+  }
+
+  // ==== API ====
+  async function apiGetMessages(room){
+    const url = API_BASE + "/messages?room=" + encodeURIComponent(room);
+    const r = await fetch(url, {method:"GET"});
+    if(!r.ok) throw new Error("GET /api/messages HTTP "+r.status);
+    const data = await r.json();
+    // obsłuż dwa możliwe formaty
+    if (Array.isArray(data)) return data;
+    if (data && Array.isArray(data.items)) return data.items;
+    return [];
+  }
+
+  async function apiSend(payload){
+    const r = await fetch(API_BASE + "/messages", {
+      method:"POST",
+      headers: {"Content-Type":"application/json"},
+      body: JSON.stringify(payload)
     });
-    msgsBox.innerHTML = out.join('');
-    msgsBox.scrollTop = msgsBox.scrollHeight;
+    if(!r.ok) throw new Error("POST /api/messages HTTP "+r.status);
+    return r.json().catch(()=> ({}));
   }
 
-  // ===== API =====
-  async function apiGetMessages() {
-    const res = await fetch('/api/messages?room=' + encodeURIComponent(ROOM));
-    if (!res.ok) throw new Error('GET /api/messages HTTP '+res.status);
-    return res.json(); // { room, items }
+  async function apiUpload(file){
+    // endpoint opcjonalny — jeśli go nie masz, po prostu nie używaj załączników
+    const fd = new FormData();
+    fd.append("file", file);
+    const r = await fetch(API_BASE + "/upload", { method:"POST", body: fd });
+    if(!r.ok) throw new Error("POST /api/upload HTTP "+r.status);
+    return r.json(); // { url: "..." }
   }
 
-  async function apiSend({ body = '', file_url = null }) {
-    const res = await fetch('/api/messages', {
-      method: 'POST',
-      headers: {'Content-Type':'application/json'},
-      body: JSON.stringify({ room: ROOM, author: ME, body, file_url })
-    });
-    if (!res.ok) throw new Error('POST /api/messages HTTP '+res.status);
-    return res.json();
-  }
-
-  // ===== AKCJE =====
-  async function load() {
-    try {
-      const data = await apiGetMessages();
-      render(data.items || []);
-    } catch (e) {
+  // ==== LOGIKA ====
+  async function load(){
+    try{
+      setConn("pobieram…");
+      const items = await apiGetMessages(state.room);
+      state.items = items;
+      render();
+      setConn("OK");
+    }catch(e){
       console.error(e);
-      alert('Błąd pobierania wiadomości');
+      showErr(String(e.message||e));
+      setConn("błąd");
     }
   }
 
-  async function sendMsg() {
-    const text = (txt.value || '').trim();
-    if (!text) return;
-    try {
-      await apiSend({ body: text, file_url: null });
-      txt.value = '';
-      await load();
-    } catch (e) {
-      console.error(e);
-      alert('Błąd wysyłania wiadomości');
-    }
-  }
-
-  async function sendFileFromBrowser(file) {
-    // Testowo: wysyłamy jako data:URL (działa od razu, bez backendu do storage)
-    const reader = new FileReader();
-    reader.onload = async () => {
-      try {
-        const dataUrl = reader.result; // data:<mime>;base64,...
-        await apiSend({ body: '', file_url: String(dataUrl) });
-        await load();
-      } catch (e) {
-        console.error(e);
-        alert('Błąd wysyłania pliku');
-      }
+  async function sendMessage(){
+    const ta = $("#text");
+    const txt = (ta.value||"").trim();
+    if(!txt){ ta.focus(); return; }
+    const payload = {
+      room: state.room,
+      author: state.me,
+      text: txt,
+      body: txt,   // zgodność wsteczna (gdy funkcja oczekuje body)
+      time: new Date().toISOString()
     };
-    reader.onerror = () => alert('Błąd odczytu pliku');
-    reader.readAsDataURL(file);
+    try{
+      setConn("wysyłam…");
+      await apiSend(payload);
+      ta.value = "";
+      await load(); // przeładuj po wysłaniu
+      setConn("OK");
+    }catch(e){
+      console.error(e);
+      showErr(String(e.message||e));
+      setConn("błąd");
+    }
   }
 
-  // ===== ZDARZENIA =====
-  const btnReload = $('#btnReload');
-  if (btnReload) btnReload.addEventListener('click', load);
-
-  const btnSend = $('#btnSend');
-  if (btnSend) btnSend.addEventListener('click', sendMsg);
-
-  if (txt) {
-    txt.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' && (e.ctrlKey || e.metaKey)) {
-        e.preventDefault();
-        sendMsg();
-      }
-    });
+  async function sendWithFile(file){
+    try{
+      setConn("upload…");
+      const up = await apiUpload(file); // {url}
+      const url = up && (up.url || up.pathname);
+      if(!url) throw new Error("Brak URL z uploadu");
+      $("#text").value = ($("#text").value||"").trim();
+      const finalText = $("#text").value ? ($("#text").value + " " + url) : url;
+      const payload = {
+        room: state.room,
+        author: state.me,
+        text: finalText,
+        body: finalText,
+        file: url,
+        time: new Date().toISOString()
+      };
+      setConn("wysyłam…");
+      await apiSend(payload);
+      $("#text").value = "";
+      await load();
+      setConn("OK");
+    }catch(e){
+      console.error(e);
+      showErr(String(e.message||e));
+      setConn("błąd");
+    }
   }
 
-  if (fileInput) {
-    fileInput.addEventListener('change', (e) => {
-      const f = e.target.files && e.target.files[0];
-      if (f) sendFileFromBrowser(f);
-      e.target.value = '';
-    });
+  // ==== ZDARZENIA ====
+  $("#btnSave").addEventListener("click", ()=>{
+    state.room = $("#room").value || "global";
+    state.me   = ($("#nick").value||"").trim() || "Pracownik";
+    localStorage.setItem("room", state.room);
+    localStorage.setItem("nick", state.me);
+    $("#title").textContent = "Pokój: " + state.room;
+    load();
+  });
+
+  $("#btnReload").addEventListener("click", load);
+
+  $("#btnSend").addEventListener("click", sendMessage);
+
+  $("#text").addEventListener("keydown", (e)=>{
+    if(e.key === "Enter" && (e.ctrlKey || e.metaKey)){
+      e.preventDefault();
+      sendMessage();
+    }
+  });
+
+  $("#btnFile").addEventListener("click", ()=> $("#file").click());
+
+  $("#file").addEventListener("change", (e)=>{
+    const f = e.target.files && e.target.files[0];
+    if(!f) return;
+    sendWithFile(f);
+    e.target.value = ""; // reset input
+  });
+
+  // prosty polling co 5s (bez SSE, żeby było „żelazo proste”)
+  function startPolling(){
+    if(state.poll) clearInterval(state.poll);
+    state.poll = setInterval(load, 5000);
   }
 
-  // START
+  // ==== START ====
   load();
+  startPolling();
 })();
 </script>
 </body>
